--- a/equipment_diagnosis/views/equipment_category_views.xml
+++ b/equipment_diagnosis/views/equipment_category_views.xml
@@ -1,63 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <record id="view_equipment_category_tree" model="ir.ui.view">
-        <field name="name">equipment.category.tree</field>
-        <field name="model">equipment.category</field>
-        <field name="arch" type="xml">
-            <list string="Equipment Categories">
-                <field name="display_name"/>
-                <field name="equipment_model_ids"/>
-            </list>
-        </field>
-    </record>
-
-    <record id="view_equipment_category_form" model="ir.ui.view">
-        <field name="name">equipment.category.form</field>
-        <field name="model">equipment.category</field>
-        <field name="arch" type="xml">
-            <form string="Equipment Category">
-                <header>
-                </header>
-                <sheet>
-                    <div class="oe_button_box" name="button_box">
-                        <button name="action_view_equipment_model_ids" type="object" class="oe_stat_button" icon="fa-pencil-square-o" invisible="equipment_model_count == 0">
-                            <field name="equipment_model_count" widget="statinfo" string="Equipment Models" />
-                        </button>
-                    </div>
-                    <group>
-                        <field name="name"/>
-                        <field name="parent_id"/>
-                        <field name="color"/>
-                        <field name="note" widget="html"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <record id="equipment_category_search_view" model="ir.ui.view">
-        <field name="name">equipment.category.search</field>
-        <field name="model">equipment.category</field>
-        <field name="arch" type="xml">
-            <search string="Search Equipment Categories">
-                <field name="name"/>
-                <field name="parent_id"/>
-            </search>
-        </field>
-    </record>
-
-    <record id="action_equipment_category" model="ir.actions.act_window">
+    <record id="diagnosis_equipment_category_action" model="ir.actions.act_window">
         <field name="name">Equipment Categories</field>
-        <field name="res_model">equipment.category</field>
-        <field name="view_mode">list,form</field>
+        <field name="res_model">maintenance.equipment.category</field>
+        <field name="view_mode">list,kanban,form</field>
+        <field name="view_id" ref="maintenance.hr_equipment_category_view_tree"/>
         <field name="help" type="html">
-            <p>
-                Manage categories of equipment here.
+            <p class="o_view_nocontent_smiling_face">
+                Add a new equipment category
             </p>
         </field>
     </record>
 
-    <menuitem id="menu_equipment_category" name="Equipment Categories" parent="menu_equipment_diagnosis_config" action="action_equipment_category" sequence="20"/>
+    <menuitem id="menu_diagnosis_equipment_category" name="Equipment Categories" parent="menu_equipment_diagnosis_root" action="diagnosis_equipment_category_action" sequence="3"/>
 
 </odoo>
