--- a/equipment_diagnosis/views/survey_templates.xml
+++ b/equipment_diagnosis/views/survey_templates.xml
@@ -4,7 +4,7 @@
     <template id="survey_fill_form_done_inherit" name="Survey: finished_inherit" inherit_id="survey.survey_fill_form_done">
         <xpath expr="//div[hasclass('row')]/div[1]/div/t" position="before">
             <p>
-                <a role="button" class="btn btn-primary btn-lg" t-att-href="'/diagnosis/selector'">
+                <a role="button" class="btn btn-primary btn-lg" t-att-href="'/diagnostic/selector'">
                     Home
                 </a>
             </p>
