--- a/equipment_diagnosis/views/survey_templates_print.xml
+++ b/equipment_diagnosis/views/survey_templates_print.xml
@@ -5,7 +5,7 @@
     <template id="survey_page_print_inherit" name="Survey: print page inherit" inherit_id="survey.survey_page_print">
         <xpath expr="//div[contains(@class, 'd-flex') and contains(@class, 'gap-2')]/t" position="before">
             <p>
-                <a role="button" class="btn btn-primary btn-lg" t-att-href="'/diagnosis/selector'">
+                <a role="button" class="btn btn-primary btn-lg" t-att-href="'/diagnostic/selector'">
                     Home
                 </a>
             </p>
